用户详情页面

--- a/src/css/userinformation.styl
+++ b/src/css/userinformation.styl
@@ -62,7 +62,7 @@
           ptor('font-size', 30)
           .left
             float: left
-            color: #3222222
+            color: #322222
           .right
             float: right
             color: #777777
